welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:6: error: ';' expected but 'while' found.
   while (!isFacingTrail()){gauche()} while (isFacingTrail==true){avance();baisseBrosse();leveBrosse();}
                                      ^SlugHunting:7: error: ';' expected but 'while' found.
   while (!isFacingTrail()){gauche()} while (isFacingTrail==true){avance();baisseBrosse();leveBrosse();}
                                      ^SlugHunting:8: error: ';' expected but 'while' found.
   while (!isFacingTrail()){gauche()} while (isFacingTrail==true){avance();baisseBrosse();leveBrosse();}
                                      ^